--- a/plumeti/views/detail.ejs
+++ b/plumeti/views/detail.ejs
@@ -43,13 +43,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="/images/<%=prod.image%>" alt="First slide">
+                                <img class="d-block w-100" src="/images/<%=prod.img1%>" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="/images/<%=prod.image2%>" alt="Second slide">
+                                <img class="d-block w-100" src="/images/<%=prod.img2%>" alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="/images/<%=prod.image3%>" alt="Third slide">
+                                <img class="d-block w-100" src="/images/<%=prod.img3%>" alt="Third slide">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
