--- a/plumeti/views/products.ejs
+++ b/plumeti/views/products.ejs
@@ -24,46 +24,56 @@
     <!-- Hasta aca llega el menu de navegacion -->
     <!-- Aca comienzan los productos-->
     <div class="container">
-            <div class="row">
-                <div class="col-3">
-                    <div class="navBar">
-                        <div>
-                            <ul class="text-center">Ordenar por:
-                              <a href="/products/nuevo"><li class="text-center">Nuevos</li></a>
-                              <a href="/products/destacado"><li class="text-center">Destacados</li></a>
-                            </ul>
-                          </div>
-
+        <div class="row">
+            <div class="col-3">
+                <div class="navBar">
+                    <div>
+                        <ul class="text-center">Ordenar por:
+                            <a href="/products/nuevo">
+                                <li class="text-center">Nuevos</li>
+                            </a>
+                            <a href="/products/destacado">
+                                <li class="text-center">Destacados</li>
+                            </a>
+                        </ul>
                     </div>
-                </div>
-
-                <div class="col-9">
-                    <div id="firstRow"class="row">
-                        <% products.forEach(function(prod){ %>
-                        <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
-                            <a href="products/detail/<%=prod.id %>"><img class="w-100" src="/images/<%=prod.image%>" alt=""></a>
-                            <h5 class="px-1 my-2 text-center"><%=prod.name %></h5>
-                            <p class="text-center px-3">$<%=prod.price%></p>
-                        </div>
-                        <% })%>
-
-                </div>
-            
-
 
                 </div>
             </div>
+
+            <div class="col-9">
+                <div id="firstRow" class="row">
+
+                    <% for(var i = 0; i < products.length; i++){ %>
+                        <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
+                            <a href="products/detail/<%=products[i].id%>">
+                                <img src="/images/<%=products[i].img1%>" alt="" class="w-100">
+                            </a>
+                            <h5 class="px-1 my-2 text-center"><%=products[i].name%></h5>
+                            <p class="text-center px-3">$<%=products[i].price%></p>
+                        </div>
+                    <% } %>
+
+                                      
+
+                </div>
+
+
+
+            </div>
+        </div>
     </div>
     <%- include('partials/footer.ejs') %>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
