avances en sequelize

--- a/plumeti/views/admproducts.ejs
+++ b/plumeti/views/admproducts.ejs
@@ -30,7 +30,7 @@
             <h2 class="col-12">Agregar Producto</h2>
         </div>
 
-        <form action="products/products" enctype="multipart/form-data" method="POST">
+        <form action="/products/create" method="POST" enctype="multipart/form-data">
 
             <div class="row pb-2" id="img-agregar-productos">
                 <div class="col-sm-12 col-md-4 imgproductos pb-2">
@@ -54,19 +54,19 @@
             </div>
 
             <div class="row pb-2 input-agregar-producto">
-                <input type="text" placeholder="Nombre" name="nombre" class="col-10 offset-1">
+                <input type="text" placeholder="Nombre" name="name" class="col-10 offset-1">
             </div>
             <div class="row pb-2 input-agregar-producto">
-                <input type="text" placeholder="Descripcion" name="descripcion" class="col-10 offset-1">
+                <input type="text" placeholder="Descripcion" name="description" class="col-10 offset-1">
             </div>
             <div class="row pb-2 input-agregar-producto">
-                <input type="text" placeholder="Precio" name="precio" class="col-10 offset-1">
+                <input type="text" placeholder="Precio" name="price" class="col-10 offset-1">
             </div>
             <div class="row pb-2 input-agregar-producto">
                 <input type="text" placeholder="Stock" name="stock" class="col-10 offset-1">
             </div>
             <div class="row pb-2 input-agregar-producto">
-                <input type="text" placeholder="Dimensiones" name="dimensiones" class="col-10 offset-1">
+                <input type="text" placeholder="Dimensiones" name="medidas" class="col-10 offset-1">
             </div>
 
             <div class="row pt-3">
