--- a/plumeti/views/detail.ejs
+++ b/plumeti/views/detail.ejs
@@ -71,7 +71,8 @@
                     <h2 class="text-center my-3"><%=prod.name%></h2>
                     <h2 class="text-center my-3">$<%=prod.price%></h2>
                     <p class="text-center my-3"><%=prod.description%><br>
-                        <%=prod.composicion%>
+                        <%=prod.composicion%><br>
+                        <%=prod.medidas%> cms<br>
                         <div id="aclaracion">Aclaración: <%=prod.aclaracion%></div>
                     </p>
                 </div>
