--- a/plumeti/views/form-nuevoproducto.ejs
+++ b/plumeti/views/form-nuevoproducto.ejs
@@ -29,7 +29,7 @@
        <h2 class="col-12">Agregar Producto</h2>
     </div>
 
-    <form action="products/products" enctype="multipart/form-data" method="POST">
+    <form action="/products/create" enctype="multipart/form-data" method="POST">
 
         <div class="row pb-2" id="img-agregar-productos">
             <div class="col-sm-12 col-md-4 imgproductos pb-2">
