--- a/plumeti/views/register.ejs
+++ b/plumeti/views/register.ejs
@@ -33,16 +33,17 @@
         <% } %>
                 <form action="/users/register" method="POST" class="py-5 form-register">
                     
-                    <input type="text" name="nombre" placeholder="Nombre y apellido">
+                    <input type="text" name="nombre" placeholder="Nombre">
 
                     
-                    <input type="text" name="usuario" placeholder="Ususario">
+                    <input type="text" name="usuario" placeholder="Usuario">
 
+                    <input type="email" name="email" placeholder="Email">
                     
                     <input type="password" name="contrasenia" placeholder="Contraseña">
 
                     
-                    <input type="email" name="email" placeholder="Email">
+
 
                     <button type="submit">Crear cuenta</button>
                     
