--- a/plumeti/views/productsNuevos.ejs
+++ b/plumeti/views/productsNuevos.ejs
@@ -39,13 +39,16 @@
 
                 <div class="col-9">
                     <div id="firstRow"class="row">
-                        <% productsCategoria.forEach(function(prod){ %>
-                        <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
-                            <a href="products/detail/<%=prod.id %>"><img class="w-100" src="/images/<%=prod.image%>" alt=""></a>
-                            <h5 class="px-1 my-2 text-center"><%=prod.name %></h5>
-                            <p class="text-center px-3">$<%=prod.price%></p>
-                        </div>
-                        <% })%>
+                        
+                        <% for(var i = 0; i < products.length; i++){ %>
+                            <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
+                                <a href="products/detail/<%=products[i].id%>">
+                                    <img src="/images/<%=products[i].img1%>" alt="" class="w-100">
+                                </a>
+                                <h5 class="px-1 my-2 text-center"><%=products[i].name%></h5>
+                                <p class="text-center px-3">$<%=products[i].price%></p>
+                            </div>
+                        <% } %>
 
                 </div>
             
