--- a/plumeti/views/admproducts.ejs
+++ b/plumeti/views/admproducts.ejs
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/stylesheets/home.css">
     <link rel="stylesheet" href="/stylesheets/admproducts.css">
     <link rel="stylesheet" href="/stylesheets/navbar.css">
-    <title>Home</title>
+    <title>Administrador de productos</title>
 </head>
 
 <body>
