--- a/plumeti/views/password.ejs
+++ b/plumeti/views/password.ejs
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/stylesheets/profile-password.css">
     <link rel="stylesheet" href="/stylesheets/footer.css">
 
-    <title>Home</title>
+    <title>Contraseñas</title>
 </head>
 <body>
 
@@ -25,7 +25,7 @@
     <div class="container-fluid">
         <div class="row">
 
-            <%- include('partials/profile-left.ejs') %>
+            <%- include('partials/profile-left.ejs',{userLogged}) %>
 
             <div class="col-lg-9 col-sm-12 p-5" id="right">
                 <div class="right">
