--- a/plumeti/public/stylesheets/cart.css
+++ b/plumeti/public/stylesheets/cart.css
@@ -4,10 +4,12 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 16px ;
     font-family: 'Baloo Paaji 2';
     letter-spacing: 3px;
+    line-height: 2rem;
     color:#404040;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 a:hover{
     text-decoration: none;
@@ -16,7 +18,7 @@ a:hover{
 .form-control{ border: none; }
 .relleno{
     height: 69px;
-    background-color: red;
+    background-color: white;
 }
 
 #tablaTotal{
@@ -37,12 +39,13 @@ margin-bottom: 30px;}
 #tablaFirst{
     border:1px solid #E9DFCF; 
     text-align:center;
-
+    margin-top:30px;
     font-size:0,5rem;
     margin-bottom: 30px;}
 
 #boton{
     background-color: #E9DFCF;
+    width: 100%;
     border: 1px solid white;
     color:black;
 }
@@ -55,7 +58,7 @@ margin-bottom: 30px;}
     div.icon{
         width:30px;
         height:30px;
-        background:blue;
+  
     }
 
     .trash{
@@ -63,3 +66,23 @@ margin-bottom: 30px;}
         border: none;outline: none;
     }
 
+    #botonFinalizar{
+        width: 100%;
+        height: 80px;
+         background-color:  #E9DFCF;
+        border: 1px solid #E9DFCF;
+        font-size: 20px;
+        }
+        #botonFinalizar a{
+            color:white;
+        
+        }
+
+#espacio{
+    height: 40px;
+}
+
+h2{
+    text-align: center;
+    margin: 300px 0
+}
