--- a/plumeti/public/stylesheets/detail.css
+++ b/plumeti/public/stylesheets/detail.css
@@ -4,10 +4,12 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px ;
     font-family: 'Baloo Paaji 2';
     letter-spacing: 3px;
+    line-height: 2rem;
     color:#404040;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 a:hover{
     text-decoration: none;
@@ -16,7 +18,7 @@ a:hover{
 .form-control{ border: none; }
 .relleno{
     height: 69px;
-    background-color: red;
+
 }
 #carousel{ position: relative; }
 #carousel .fa-chevron-right , .fa-chevron-left{
@@ -50,9 +52,7 @@ footer{ background-color: #E9DFCF; }
     margin-top:40px;
 }
 
-.botones{
-    flex-grow:-1;
-}
+
 
 .comentarios{
     margin-top:20px;
@@ -74,15 +74,19 @@ footer{ background-color: #E9DFCF; }
 }
 
 #boton{
+width: 100%;
+height: 80px;
  background-color:  #E9DFCF;
 border: 1px solid #E9DFCF;
+font-size: 20px;
 }
 #boton a{
     color:white;
+
 }
 
 #aclaracion{
-  font-size: 0.7rem;
+  font-size: 20px;
   text-align: center;
   font-style: italic;
 
@@ -94,4 +98,8 @@ p{
 
 .form-group{
     border:1px solid  #E9DFCF;
+}
+
+h2 {
+    font-size: 50px;
 }
