--- a/plumeti/public/stylesheets/products.css
+++ b/plumeti/public/stylesheets/products.css
@@ -4,10 +4,12 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px ;
     font-family: 'Baloo Paaji 2';
     letter-spacing: 3px;
+    line-height: 2rem;
     color:#404040;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 .navBar{
     background-color: #E9DFCF;
