--- a/plumeti/public/stylesheets/profile-left.css
+++ b/plumeti/public/stylesheets/profile-left.css
@@ -2,7 +2,7 @@
     background-color: #f7f7f7;
 }
 
-.left .foto-perfil{
+.left .foto-perfil {
     width: 13rem;
     height: 13rem;
     background-image: url('/images/añadir-foto.png');
@@ -10,6 +10,8 @@
     border-radius: 50%;
     cursor: pointer;
     transition: .3s;
+    border: none;
+    outline: none;
 }
 .left .foto-perfil:hover{
     transform: scale(1.05);
@@ -25,4 +27,26 @@
 #left .left .nav-profile ul li:nth-child(1) a{
     _color: #0077cc;
 
+
+    
+}
+.formAvatar {
+    display: flex;
+    flex-direction: column;
+}
+
+#avatar{
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+
+}
+
+#avatarId{
+    width: 13rem;
+    height: 13rem;
+    border-radius: 50%;
+    cursor: pointer;
+    border: none;
+    outline: none;
 }
