--- a/plumeti/views/cart.ejs
+++ b/plumeti/views/cart.ejs
@@ -23,28 +23,36 @@
 </head>
 
 <body>
-    <%- include('partials/navbar.ejs',{userLogged}) %>
+	<%- include('partials/navbar.ejs',{userLogged}) %>
+	<% if (products != undefined) { %>
 	<div class="container">
 		<div class="row d-flex align-items-center">
-			<% products.forEach(function(prod){ %>
-			<section id="tablaFirst" class="col-12 d-flex align-items-center">
-				<img class="col-2" src="/images/<%=prod.image%>" alt="">
-				<span class="col-3 "><%=prod.name%></span>
-				<span class="col-4 ">
-					<div id="botonModificar" class="btn-group mr-2 .btn-group-*" role="group" aria-label="Second group">
-						<button id="boton" type="button" class="btn btn-secondary">-</button>
-						<button id="boton" type="button" >1</button>
-						<a href="/cart"><button id="boton" type="button" class="btn btn-secondary">+</button></a>
+			
+			
+			<% for(var i = 0; i < products.length; i++){ %>
+				
+				<section id="tablaFirst" class="col-12 d-flex align-items-center">
+					<img class="col-2" src="/images/<%=products[i].img1%>" alt="">
+					<span class="col-3 "><%=products[i].name%></span>
+					<span class="col-4 ">
+						<div id="botonModificar" class="btn-group mr-2 .btn-group-*" role="group" aria-label="Second group">
+							<button type="button" class="btn btn-secondary menos">-</button>
+							<button class="cantidad" type="button" ></button>
+							<a href="/cart"><button type="button" class="btn btn-secondary mas">+</button></a>
+	
+						</div>
+					</span>
+					
+					<span class="col-2">$
+						<span class="precio"><%=products[i].price%></span>
+					</span>                 
+					<form action="/cart/delete/<%=products[i].id%>/?_method=DELETE" method="POST">
+						<button class="trash" type="submit"><i class="fas fa-trash"></i></button>
+					</form>
+				</section>
+			<% } %>
 
-					</div>
-				</span>
-				<span class="col-2">$<%=prod.price%></span>					
-				<form action="/cart/delete/<%=prod.id%>?_method=DELETE" method="POST">
-					<button class="trash" type="submit"><i class="fas fa-trash"></i></button>
-				</form>
-
-			</section>
-			<% })%>
+	
 		</div>
 
 		<div class="row d-flex align-items-center">
@@ -52,11 +60,36 @@
 				<img class="col-2">
 				<span class="col-3"></span>
 				<span class="col-4">TOTAL</span>
-				<span class="col-2">$300</span>
+				<span class="col-2">$ <%= totalPrice %></span>
+			
 				<span class="col-1"></span>
+					
 			</section>
 		</div>
+		
+        <div class="row">
+            <div class="col-lg-8 col-md-1 col-sm-0 product mt-2">
+
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-12 product mt-2">
+               
+                    <input type="hidden" name="finish">
+                    <button id="botonFinalizar" type="submit" class="btn btn-dark">
+                        Finalizar compra</a>
+                    </button>
+    
+            </div>
+		</div>
+		
+		<div id="espacio">
+		</div>
 	</div>
+<% } else if (products == null) { %>
+	<h2>TU CARRITO ESTA VACIO</h2>
+	<% } %>
+
+
+
 
     <%- include('partials/footer.ejs') %>
 
@@ -69,6 +102,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 		crossorigin="anonymous"></script>
+		<script src="/js/cart.js"></script>
 </body>
 
 </html>
