--- a/plumeti/views/productsNuevos.ejs
+++ b/plumeti/views/productsNuevos.ejs
@@ -42,7 +42,7 @@
                         
                         <% for(var i = 0; i < products.length; i++){ %>
                             <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
-                                <a href="products/detail/<%=products[i].id%>">
+                                <a href="/products/detail/<%=products[i].id%>">
                                     <img src="/images/<%=products[i].img1%>" alt="" class="w-100">
                                 </a>
                                 <h5 class="px-1 my-2 text-center"><%=products[i].name%></h5>
