--- a/plumeti/views/admproducts.ejs
+++ b/plumeti/views/admproducts.ejs
@@ -97,7 +97,7 @@
         <div class="row mt-5 py-3" id="stock">
             <div class=" col-6 d-flex align-items-center">
                 <span>
-                    <img class="pr-3 d-none d-lg-block" src="/images/<%=products[i].img1%>" alt="">
+                    <img class="pr-3 d-none d-lg-block" src="/images/products/<%=products[i].img1%>" alt="">
                 </span>
                 <%=products[i].name%>
             </div>
