--- a/plumeti/views/howTo.ejs
+++ b/plumeti/views/howTo.ejs
@@ -8,10 +8,8 @@
 	<!-- Archivos javascript -->
 	<script src="https://kit.fontawesome.com/eff8b9a252.js" crossorigin="anonymous"></script>
 
-	<!-- BOOTSTRAP -->
-
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!--Bootstrap-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
 	<!-- Archivos CSS -->
@@ -30,10 +28,10 @@
     <h3 style="text-align: center;">Como transformar tu pañuelo en máscara</h3>
     <br>
     <div class="row">
-        <div class="col-3"><img src="" alt=""></div>
-        <div class="col-3"><img src="" alt=""></div>
-        <div class="col-3"><img src="" alt=""></div>
-        <div class="col-3"><img src="" alt=""></div>
+        <div class=" col-lg-3 col-md-6 col-sm-12"><img src="" alt=""></div>
+        <div class=" col-lg-3 col-md-6 col-sm-12"><img src="" alt=""></div>
+        <div class=" col-lg-3 col-md-6 col-sm-12"><img src="" alt=""></div>
+        <div class=" col-lg-3 col-md-6 col-sm-12"><img src="" alt=""></div>
     </div>
 </div>
 <br>
