--- a/plumeti/views/cart.ejs
+++ b/plumeti/views/cart.ejs
@@ -32,7 +32,7 @@
 			<% for(var i = 0; i < products.length; i++){ %>
 				
 				<section id="tablaFirst" class="col-12 d-flex align-items-center">
-					<img class="col-2" src="/images/<%=products[i].img1%>" alt="">
+					<img class="col-2" src="/images/products/<%=products[i].img1%>" alt="">
 					<span class="col-3 "><%=products[i].name%></span>
 					<span class="col-4 ">
 						<div id="botonModificar" class="btn-group mr-2 .btn-group-*" role="group" aria-label="Second group">
@@ -75,7 +75,7 @@
                
                     <input type="hidden" name="finish">
                     <button id="botonFinalizar" type="submit" class="btn btn-dark">
-                        Finalizar compra</a>
+                        Finalizar compra
                     </button>
     
             </div>
